# mcp-data-check

./: .gitignore  README.md  pyproject.toml
src/mcp_data_check/: __init__.py  eval_methods.py  evaluator.py  run_eval.py
tests/: test_evaluation.py
